modify debug page texts

--- a/debug/debug.html
+++ b/debug/debug.html
@@ -48,7 +48,7 @@
     <p>Audio current time: <span class="spec_current"></span></p>
     <p>Audio duration: <span class="spec_duration"></span></p>
     <span></span>
-    <p>Fired audio events (<code>timeupdate</code> prints every 5 sec): <span class="spec_event"></span></p>
+    <p>Fired audio events (<code>timeupdate</code> prints every 5s): <span class="spec_event"></span></p>
   </section>
   <script src="../src/main.js"></script>
   <script>
