turn background svg to iconfont

--- a/debug/debug.html
+++ b/debug/debug.html
@@ -17,10 +17,10 @@
         <div data-shisa="progress"></div>
       </div>
       <div class="actions">
-        <button data-shisa="mute"></button>
+        <button data-shisa="mute" aria-label="toggle audio mute"></button>
         <button data-shisa="speed" data-speed-max="3" data-speed-min="0.5" data-speed-step="0.5" data-speed="1">speed</button>
-        <button data-shisa="seek" data-seek-backward="10"></button>
-        <button data-shisa="seek" data-seek-forward="10"></button>
+        <button data-shisa="seek" data-seek-backward="15" aria-label="skip forward 15 second"></button>
+        <button data-shisa="seek" data-seek-forward="15" aria-label="skip backward 15 second"></button>
       </div>
       <div class="time">
         <div data-shisa="spinner"></div>
